--- a/src/main/resources/fxml/MainWindowInterface.fxml
+++ b/src/main/resources/fxml/MainWindowInterface.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
@@ -12,30 +15,52 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="mainWindowPane" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #efefef;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainWindowController">
+<AnchorPane fx:id="mainWindowPane" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #efefef;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainWindowController">
    <children>
-      <TabPane fx:id="choosePackagesTab" layoutX="470.0" layoutY="59.0" prefHeight="440.0" prefWidth="315.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #BABABA;" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="100.0" tabMaxWidth="1.797693101348623E308" tabMinWidth="50.0">
+      <TabPane fx:id="choosePackagesTab" layoutX="470.0" layoutY="59.0" prefHeight="440.0" prefWidth="515.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #BABABA;" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="100.0" tabMaxWidth="1.797693101348623E308" tabMinWidth="50.0">
         <tabs>
           <Tab fx:id="installedPackagesTab" style="-fx-font-size: 18;" text="Installed">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="298.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="403.0" prefWidth="441.0">
+                     <children>
+                        <TableView fx:id="installedPackagesTableView" layoutX="64.0" layoutY="101.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <columns>
+                            <TableColumn fx:id="installedPackagesNameColumn" prefWidth="300.0" text="Name" />
+                            <TableColumn fx:id="installedPackagesVersionColumn" prefWidth="215.0" text="Version" />
+                          </columns>
+                        </TableView>
+                     </children></AnchorPane>
             </content>
           </Tab>
           <Tab fx:id="allPackagesTab" style="-fx-font-size: 18;" text="All">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="379.0" prefWidth="313.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="379.0" prefWidth="313.0">
+                     <children>
+                        <TableView fx:id="allPackagesTableView">
+                           <columns>
+                              <TableColumn fx:id="allPackagesNameColumn" prefWidth="300.0" text="Name" />
+                              <TableColumn fx:id="allPackagesVersionColumn" prefWidth="215.0" text="Version" />
+                           </columns>
+                        </TableView>
+                     </children></AnchorPane>
             </content>
           </Tab>
         </tabs>
       </TabPane>
       <TextArea fx:id="logTextArea" layoutX="12.0" layoutY="314.0" prefHeight="272.0" prefWidth="444.0" />
-      <TextField fx:id="searchInputTextField" layoutX="471.0" layoutY="10.0" prefHeight="40.0" prefWidth="210.0">
+      <TextField fx:id="searchInputTextField" layoutX="471.0" layoutY="10.0" prefHeight="40.0" prefWidth="412.0">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <Button fx:id="searchButton" layoutX="694.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="90.0" style="-fx-font-size: 18;" text="Search" />
+      <Button fx:id="searchButton" layoutX="897.0" layoutY="10.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="82.0" style="-fx-font-size: 18;">
+         <graphic>
+            <ImageView fitHeight="30.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/magnifier.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
       <Label fx:id="nameLabel" alignment="CENTER" contentDisplay="BOTTOM" graphicTextGap="0.0" layoutX="12.0" layoutY="10.0" prefHeight="30.0" prefWidth="444.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 100; -fx-border-color: #BABABA; -fx-border-radius: 100;" textOverrun="CLIP" wrapText="true">
          <font>
             <Font size="18.0" />
@@ -59,6 +84,9 @@
          <tooltip>
             <Tooltip text="Description" />
          </tooltip>
+         <padding>
+            <Insets left="5.0" right="5.0" />
+         </padding>
       </Label>
       <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="BOTTOM" graphicTextGap="0.0" layoutX="56.0" layoutY="267.0" prefHeight="40.0" prefWidth="360.0" text="Status" textOverrun="CLIP" wrapText="true">
          <font>
@@ -67,8 +95,8 @@
       </Label>
       <Button fx:id="installButton" layoutX="15.0" layoutY="220.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="211.0" style="-fx-font-size: 18;" text="Install" />
       <Button fx:id="removeButton" layoutX="242.0" layoutY="220.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="213.0" style="-fx-font-size: 18;" text="Remove" />
-      <Button fx:id="refreshButton" layoutX="470.0" layoutY="505.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="315.0" style="-fx-font-size: 18;" text="Refresh" />
-      <Button fx:id="chooseVcpkgButton" layoutX="736.0" layoutY="552.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="49.0">
+      <Button fx:id="refreshButton" layoutX="470.0" layoutY="505.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="515.0" style="-fx-font-size: 18;" text="Refresh" />
+      <Button fx:id="chooseVcpkgButton" layoutX="935.0" layoutY="552.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="49.0">
          <graphic>
             <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -77,7 +105,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <TextField fx:id="pathInputTextField" layoutX="471.0" layoutY="552.0" prefHeight="40.0" prefWidth="255.0">
+      <TextField fx:id="pathInputTextField" layoutX="471.0" layoutY="552.0" prefHeight="40.0" prefWidth="450.0">
          <font>
             <Font size="18.0" />
          </font>
